--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,21 @@ name = "xenon"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[example]]
+name = "wgpu"
+path= "examples/wgpu.rs"
 
 [dependencies]
 winit = "0.27.4"
 log = "0.4.17"
+image = "0.24.4"
+lyon = "1.0.0"
+euclid = "0.22.7"
+raw-window-handle = "0.5.0"
+wgpu = "0.14.0"
+pollster = "0.2.5"
+bytemuck = { version = "1.12.1", features = ["derive"] }
+fastrand = "1.8.0"
+
+[dev-dependencies]
+env_logger = "0.9.1"
